--- a/Melbourne_Housing_Price _Predictions-2.ipynb
+++ b/Melbourne_Housing_Price _Predictions-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "max      -37.390200    145.526350   21650.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,20 +794,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kaldırılmadan önce yinelenen satırların sayısı: 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Kaldırılmadan önce yinelenen satırların sayısı: 1\n",
       "Kaldırıldıktan sonra yinelenen satırların sayısı: 0\n"
      ]
     }
@@ -825,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1225,7 @@
        "[34856 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1745,8 +1739,8 @@
       "Ridge Model - MAE: 4.1422723504177444e-10, MSE: 4.683856387362146e-19, RMSE: 6.843870533084437e-10, R2: 1.0\n",
       "ElasticNet Model - MAE: 0.0013994898636601628, MSE: 3.7373835554188258e-06, RMSE: 0.0019332313765865756, R2: 1.0\n",
       "KNeighborsRegressor Model - MAE: 828.6713808463251, MSE: 16621301.811069045, RMSE: 4076.9230813284967, R2: 0.9999635043039516\n",
-      "RandomForestRegressor Model - MAE: 462.2083184855231, MSE: 5818662.872676058, RMSE: 2412.1904718898254, R2: 0.9999872238556268\n",
-      "GradientBoostingRegressor Model - MAE: 4460.448810470059, MSE: 74998842.56754479, RMSE: 8660.18721319261, R2: 0.9998353236711879\n",
+      "RandomForestRegressor Model - MAE: 662.2807126948777, MSE: 49704669.62821826, RMSE: 7050.153872662516, R2: 0.9998908625488211\n",
+      "GradientBoostingRegressor Model - MAE: 4446.137353338382, MSE: 69383411.07631655, RMSE: 8329.670526276328, R2: 0.999847653576704\n",
       "AdaBoostRegressor Model - MAE: 77764.74308979414, MSE: 10705531534.525846, RMSE: 103467.53855449469, R2: 0.9764936688256225\n"
      ]
     }
@@ -1800,6 +1794,73 @@
     "# Modellerin performansını karşılaştırabilirsiniz\n",
     "for model_name, model in models.items():\n",
     "    print(f\"{model_name} Model - MAE: {model['mae']}, MSE: {model['mse']}, RMSE: {model['rmse']}, R2: {model['r2']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Performansı:\n",
+      "                       Model           MAE           MSE          RMSE  \\\n",
+      "0                      Lasso  2.646691e-04  1.336609e-07  3.655966e-04   \n",
+      "1           LinearRegression  6.387610e-10  9.991725e-19  9.995862e-10   \n",
+      "2                      Ridge  4.142272e-10  4.683856e-19  6.843871e-10   \n",
+      "3                 ElasticNet  1.399490e-03  3.737384e-06  1.933231e-03   \n",
+      "4        KNeighborsRegressor  8.286714e+02  1.662130e+07  4.076923e+03   \n",
+      "5      RandomForestRegressor  6.813255e+02  3.015550e+07  5.491402e+03   \n",
+      "6  GradientBoostingRegressor  4.478262e+03  7.759624e+07  8.808873e+03   \n",
+      "7          AdaBoostRegressor  7.776474e+04  1.070553e+10  1.034675e+05   \n",
+      "\n",
+      "         R2  \n",
+      "0  1.000000  \n",
+      "1  1.000000  \n",
+      "2  1.000000  \n",
+      "3  1.000000  \n",
+      "4  0.999964  \n",
+      "5  0.999934  \n",
+      "6  0.999830  \n",
+      "7  0.976494  \n",
+      "\n",
+      "En İyi Model:\n",
+      "Model    Ridge\n",
+      "MAE        0.0\n",
+      "MSE        0.0\n",
+      "RMSE       0.0\n",
+      "R2         1.0\n",
+      "Name: 2, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Her bir modeli eğitip değerlendirme işlemi yapma\n",
+    "results = []\n",
+    "\n",
+    "for model_name, model in models.items():\n",
+    "    model['model'].fit(X_train, y_train)\n",
+    "    y_pred = model['model'].predict(X_test)\n",
+    "    mae = mean_absolute_error(y_test, y_pred)\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    rmse = mse**0.5\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    model['mae'] = mae\n",
+    "    model['mse'] = mse\n",
+    "    model['rmse'] = rmse\n",
+    "    model['r2'] = r2\n",
+    "    results.append((model_name, mae, mse, rmse, r2))\n",
+    "\n",
+    "# Modellerin Performansını Karşılaştırma\n",
+    "results_df = pd.DataFrame(results, columns=['Model', 'MAE', 'MSE', 'RMSE', 'R2'])\n",
+    "best_model = results_df.sort_values(by='MAE').iloc[0]\n",
+    "\n",
+    "print(\"Model Performansı:\")\n",
+    "print(results_df)\n",
+    "print(\"\\nEn İyi Model:\")\n",
+    "print(best_model)"
    ]
   },
   {
